--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-sdk android:minSdkVersion="23" android:targetSdkVersion="33" />
 
     <application
       android:name=".MainApplication"
@@ -21,7 +22,7 @@
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
       </activity>
-        <!-- <meta-data
+        <meta-data
             android:name="com.google.android.gms.car.application"
             android:resource="@xml/automotive_app_desc"/>
         <service
@@ -30,6 +31,6 @@
             <intent-filter>
                 <action android:name="com.google.android.car.action.CAR_APP" />
             </intent-filter>
-        </service> -->
+        </service>
     </application>
 </manifest>
