--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-permission android:name="android.permission.INTERNET" />
+<!--    <uses-sdk android:minSdkVersion="23" android:targetSdkVersion="33" />-->
 
     <application
       android:name=".MainApplication"
